--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 		</div>
 		<div class="textytext">
 			<h3>Voice Recogniztion Lab</h3>
-				<input type="button" name="startstop" id="startstop" value="Speak" onclick="changeJob()">
+				<input type="button" name="startstop" id="startstop" value="Speak" onclick="changeJob()"><br>
+				I was not able to get this lab to work. I could not get the voice to save to a variable.
 		</div>
 	</div>
 	<div class="bottom">This is the bottom of the page. 2017.</div>
