--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 			<canvas id="drawingCanvas" width="600" height="600"></canvas>
 		</div>
 		<div class="textytext">
-			<h3>Voice Recogniztion Lab</h3>
-				<input type="button" name="startstop" id="startstop" value="Speak" onclick="changeJob()"><br>
+			<h3>Voice Recognition Lab</h3>
+				<input type="button" name="startstop" id="startstop" value="Speak" onclick="changeJob()"><br><br>
 				I was not able to get this lab to work. I could not get the voice to save to a variable.
 		</div>
 	</div>
